# NDICppMinimal

./: CMakeLists.txt  README.md  main.cpp
